# BrokerAI

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  app.py  config.yaml  embed.py  embed_test.py  ingest.py  layout-analyzer.py  pyproject.toml
db/pdfs/: spec.yaml
frontend/: index.html
frontend/css/: jquery-ui.min.css
frontend/js/: jquery-ui.min.js  pdf.min.mjs  pdf.mjs.map  pdf.worker.min.mjs  pdf_viewer.mjs  pdf_viewer.mjs.map  simpleviewer.mjs
pdf_tools/: __init__.py  tools.py
pii/: ARCHITECTURE.md  CLAUDE.md  DONE.md  README.md  ROADMAP.md  TODO.md  __init__.py  __main__.py  cli.py  csv_mode.py  gliner2_recognizer.py  gliner_recognizer.py  image_mode.py  invalid_recognizers.py  mapping.py  ocr.py  pipeline.py  recognizers.py  requirements.txt
pii/cli/: ARCHITECTURE.md  DONE.md  ROADMAP.md  TODO.md  __init__.py
pii/core/: ARCHITECTURE.md  DONE.md  ROADMAP.md  TODO.md  __init__.py  checksums.py  constants.py  csv_mode.py  gliner2_recognizer.py  image_mode.py  invalid_recognizers.py  linearization.py  mapping.py  ocr.py  ocr_debug.py  ocr_paddle.py  ocr_page.py  ocr_ppstructure.py  ocr_surya.py  ocr_worker.py  org_policy.py  paint.py  pdf_mode.py  pipeline.py  recognizers.py
pii/examples/: sample.txt  (+1 more)
pii_eval/: README.md  __init__.py  __main__.py  au.py  build.py  generate.py  nameforms.py  ocr_report.py  personas.py  realdocs.py  render.py  score.py  score_image.py  templates_csv.py  templates_text.py  txbank.py
rag_tools/: __init__.py  db.py  embeddings.py  pdf.py  tokenizer.py  tree.py
tests/: conftest.py
(+43 files in other folders)
